css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

   @import url("https://use.typekit.net/onl1exw.css");
   :root {
     --dark-color: hsl(var(--hue), 100%, 9%);
     --light-color: hsl(var(--hue), 95%, 98%);
     --base: hsl(var(--hue), 95%, 50%);
     --complimentary1: hsl(var(--hue-complimentary1), 95%, 50%);
     --complimentary2: hsl(var(--hue-complimentary2), 95%, 50%);
   
     --font-family: 'Poppins', system-ui;
     --header-height: 110px;
     --bg-gradient: linear-gradient(
       to bottom,
       hsl(var(--hue), 95%, 99%),
       hsl(var(--hue), 95%, 84%)

     );
     
   }
   
   html {
     scroll-behavior: smooth;
     font-size: 100%;
     line-height: 1.75;
   }
   
   body {
     height: 100vh;
     width: 100vw;
     margin: 0;
     font-family: 'Acumin Pro', Helvetica, sans-serif;
     overflow-x: hidden;
   }
   
   p {margin-bottom: 1rem;}
   
   h1, h2, h3, h4, h5 {
     margin: 3rem 0 1.38rem;
     font-weight: 600;
     /* line-height: 1.3; */
   }
   
   h1 {
     margin-top: 0;
     font-size: 5.653rem;
   }
   
   h2 {font-size: 3.998rem;}
   
   h3 {font-size: 2.827rem;}
   
   h4 {font-size: 1.999rem;}
   
   h5 {font-size: 1.414rem;}
   
   small, .text_small {font-size: 0.707rem;}
   
   h1 {
     font-size: 75px;
   }
   
   h2 {
     font-size: 60px;
   }
   
   h3 {
     font-size: 40px;
   }
   
   .fullscreen-view {
     display: block;
     height: 100vh;
     min-height: -webkit-fill-available;
     width: auto;
     /*background-color: rgb(255, 255, 255);*/
     
   }
   
   /* Nav Bar */
   
   ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
   
   a {
     text-decoration: none;
   }
   
   .nav-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
   
   .nav-container a {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
     color: black;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
   }
   
   .nav-container nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
   
   .nav-container .social-header {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
   }
   
   .social-header li {
     align-content: center;
   }
   
   .nav-container .hamburger-menu {
     display: none;
     -webkit-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
   }
   
   .nav-container .hamburger-menu .hamburger-nav {
     display: none;
   }

   #menuToggle
{
  display: none;
  
  position: relative;
  top: 12px;
  left: 0px;
  
  z-index: 1;
  
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle a
{
  text-decoration: none;
  color: #232323;
  
  transition: color 0.3s ease;
}

#menuToggle a:hover
{
  color: tomato;
}


#menuToggle input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  
  cursor: pointer;
  
  opacity: 0; /* hide this */
  z-index: 2; /* and place it over the hamburger */
  
  -webkit-touch-callout: none;
}

/*
 * Just a quick hamburger
 *s
 */
#menuToggle span
{
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  
  background: #cdcdcd;
  border-radius: 3px;
  
  z-index: 1;
  
  transform-origin: 4px 0px;
  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}

#menuToggle span:first-child
{
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2)
{
  transform-origin: 0% 100%;
}

/* 
 * Transform all the slices of hamburger
 * into a crossmark.
 */
#menuToggle input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #232323;
}
/* ... */

